apps/leaven-twapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leaven-twapi-ingress
  namespace: leaven
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: twapi.haenu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: leaven-twapi
            port:
              number: 4200
